--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kemp.saranya.javaist">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +22,8 @@
         <activity android:name=".TestMenuActivity" />
         <activity android:name=".LearnIfElseActivity" />
         <activity android:name=".LearnLoopActivity" />
-        <activity android:name=".QuizLoopActivity"></activity>
+        <activity android:name=".QuizLoopActivity" />
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
